test/users/ferguson/recordassignstring.good
recordassignstring.chpl:10: error: unresolved call 'Point.init=(string)'
recordassignstring.chpl:1: note: candidates are: Point.init=(other: Point)
