test/users/ferguson/recordassignstring.chpl
record Point {
  var x:int;
  var y:int;
}

var p = new Point(1,2);

var s = p:string;

var q:Point = s;

